# basyx-demonstrators

./: .gitmodules  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  README.md  Unity.TextMeshPro.Editor.csproj  Unity.TextMeshPro.csproj  packages.config
.github/workflows/: acplt-aas.yaml  acplt-bpmn.yml  acplt-cc.yml  acplt-emu.yml  acplt-executor.yaml  acplt.yaml  acplt.yml
Assets/: IO_Configuration.xml  Safety_Wall.fbx
Assets/Materials/: Brown.mat  Orange.mat  SignalWhite.mat  Table.physicMaterial
Assets/Meshes/: Model_101.asset  Model_102.asset  Model_103.asset  Model_104.asset  Model_113.asset  Model_115.asset  Model_118.asset  Model_127.asset  Model_128.asset  Model_131.asset  Model_132.asset  Model_134.asset  Model_138.asset  Model_139.asset  Model_14.asset  Model_141.asset  Model_142.asset  Model_147.asset  Model_151.asset  Model_154.asset  Model_158.asset  Model_159.asset  Model_16.asset  Model_160.asset  Model_167.asset  Model_174.asset  Model_178.asset  Model_180.asset  Model_186.asset  Model_197.asset  Model_198.asset  Model_20.asset  Model_205.asset  Model_209.asset  Model_213.asset  (+109 more)
ProjectSettings/: ProjectSettings.asset  QualitySettings.asset
Temp/: workerlic
acplt/: Demo.bat  README.md
acplt/cc/: .gitignore  CMakeLists.txt  README.md
acplt/cc/inc/: ccs_io.h  ccs_ioList.h  ccs_io_generic.h  ccs_type.h  ccs_type_conveyor.h  ccs_type_generic.h  ccs_type_robot.h
acplt/cc/src/: ccs_io.c  ccs_ioList.c  ccs_io_generic.c  ccs_server.c  ccs_shmtool.c  ccs_type.c  ccs_type_conveyor.c  ccs_type_coverUnit.c  ccs_type_generic.c  ccs_type_robot.c
(+1433 files in other folders)
